rick-roll-virus/scripts/iptables.conf
# Generated by iptables-save v1.8.9 on Thu Jun 15 12:59:56 2023
*filter
:INPUT ACCEPT [2258535:1701414698]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [998075:91204059]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -o br-58ed0afaf64e -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o br-58ed0afaf64e -j DOCKER
-A FORWARD -i br-58ed0afaf64e ! -o br-58ed0afaf64e -j ACCEPT
-A FORWARD -i br-58ed0afaf64e -o br-58ed0afaf64e -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -i br-58ed0afaf64e ! -o br-58ed0afaf64e -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -o br-58ed0afaf64e -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
COMMIT
# Completed on Thu Jun 15 12:59:56 2023
# Generated by iptables-save v1.8.9 on Thu Jun 15 12:59:56 2023
*nat
:PREROUTING ACCEPT [3272:762714]
:INPUT ACCEPT [342:45765]
:OUTPUT ACCEPT [13328:3525935]
:POSTROUTING ACCEPT [13328:3525935]
:DOCKER - [0:0]
-A PREROUTING -p tcp -m tcp --dport 80 -j DNAT --to-destination 127.0.0.1:11110
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.18.0.0/16 ! -o br-58ed0afaf64e -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
-A DOCKER -i br-58ed0afaf64e -j RETURN
COMMIT
# Completed on Thu Jun 15 12:59:56 2023
# Generated by iptables-save v1.8.9 on Thu Jun 15 12:59:56 2023
*mangle
:PREROUTING ACCEPT [2261496:1702138618]
:INPUT ACCEPT [2258562:1701420864]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [998103:91206251]
:POSTROUTING ACCEPT [998247:91210967]
COMMIT
# Completed on Thu Jun 15 12:59:56 2023
# Generated by iptables-save v1.8.9 on Thu Jun 15 12:59:56 2023
*raw
:PREROUTING ACCEPT [2261496:1702138618]
:OUTPUT ACCEPT [998103:91206251]
COMMIT
# Completed on Thu Jun 15 12:59:56 2023
# Generated by iptables-save v1.8.9 on Thu Jun 15 12:59:56 2023
*security
:INPUT ACCEPT [2258562:1701420864]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [998103:91206251]
COMMIT
# Completed on Thu Jun 15 12:59:56 2023
